automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -250,10 +250,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fcbb9ae8780>"
+       "<folium.map.Marker at 0x7f5f2aad36d8>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
